--- a/index.html
+++ b/index.html
@@ -81,21 +81,22 @@
     <!-- Footer -->
     <footer>
         <div>
-            <h1></h1>
-            <a href=""></a>
+            <h1>Endereço</h1>
+            <a href="">Rua nossa Sª do Rosário, nº 3175.</a>
         </div>
 
         <div>
-            <h1></h1>
-            <p></p>
+            <h1>Contato</h1>
+            <p>Email: <span>jhollyferr@gmail.com</span></p>
+            <p>Telefone: <span>(97) 9186-8561</span></p>
         </div>
 
         <div>
-            <h1></h1>
-            <a href="www.facebook.com/jhollyferr" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
-            <a href="www.instagram.com/_jhollyferr" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-            <a href="www.linkedin.com/in/jhollyferr" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
-            <a href="www.github.com/jhollyferr" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+            <h1>Redes Sociais</h1>
+            <a href="https://facebook.com/jhollyferr" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+            <a href="https://instagram.com/_jhollyferr" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+            <a href="https://linkedin.com/in/jhollyferr" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+            <a href="https://github.com/jhollyferr" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
         </div>
 
     </footer>
