--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
         <!-- Home Section -->
-        <section id="cartao-credito" class="container-content">
+        <section id="home" class="container-content">
           <div class="content-box">
             <img src="img/home.jpg" alt="Cartão de Crédito" class="img-default"/>
             <p class="text text-right">
